--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -71,7 +71,7 @@
   z-index: 100;
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
-  padding: 0.5rem 4rem 0.5rem;
+  padding: 0.5rem 2rem 0.5rem;
   transform-origin: top center;
   transition: all 0.4 ease;
 }
@@ -499,7 +499,7 @@
   -webkit-tap-highlight-color: transparent;
 }
   .navbar {
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 0rem;
   }
   
   .navbar.shrink .nav-links > .nav-dropdown-wrapper:nth-of-type(1),
